--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "openai": {
-        "api_key": "sk-cra"
+        "api_key": "v1-boomsauce"
     },
     "openrouter": {
         "api_key": "sk-or-v1-...",
@@ -25,11 +25,10 @@
         "enabled": true,
         "endpoint": "http://localhost:11434",
         "model_mappings": {
-            "default": "Qwen2.5-Coder:latest",
-            "qwen3": "Qwen3",
-            "qwen2.5": "Qwen2.5",
-            "qwen2.5-coder": "Qwen2.5-coder",
-            "qwen2.5-r1": "cyberuser42/DeepSeek-R1-Distill-Qwen-7B"
+            "default": "qwen3:latest",
+            "qwen3": "qwen3:latest",
+            "qwen3-coder": "qwen3-coder:latest",
+            "qwen3-coder-480b": "qwen3-coder:480b-cloud"
         },
         "thinking_mode": true,
         "skip_integrity_check": true,
