--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,6 @@ dependencies = [
     "termcolor==2.3.0",
     "setuptools==65.6.3",
     "PyQt6==6.5.2",
-    "tiktoken==0.9.0",
     "httpx==0.25.1",
 ]
 
@@ -88,7 +87,7 @@ Issues = "https://github.com/pascalseeber/ollamalink/issues"
 Documentation = "https://github.com/pascalseeber/ollamalink#readme"
 
 [project.scripts]
-ollamalink = "run_cli:main"
+ollamalink = "ollamalink.cli:main"
 
 [tool.black]
 line-length = 88
